# moon-reader-quote

./: .gitignore  README.md  build.py  package-lock.json  package.json  pyproject.toml  vite.config.js
moon-quote-js/: index.html  package-lock.json
moon-quote-js/src/: lib.ts  main.ts
moon_quote/: __init__.py  __main__.py  book.py  mrexpt.py  server.py
src/: lib.ts  main.ts  style.css
