[project]
name = ""
version = ""
description = ""
authors = [
    {name = "francisthebasilisk", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "ebooklib>=0.17.1",
    "flask>=2.1.2",
    "selenium>=4.3.0",
    "fuzzysearch>=0.7.3",
    "dataclasses-json>=0.5.7",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
